--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -42,22 +42,22 @@ fieldset.group {
     margin-top: 15px;
 }
 
-.cmb2-id-cgda-customizer-notice-text .CodeMirror {
+.cmb2-id-backstage-customizer-notice-text .CodeMirror {
     max-height: 75px;
 }
 
-.cmb2-id-cgda-frontend-custom-html .CodeMirror {
+.cmb2-id-backstage-frontend-custom-html .CodeMirror {
     max-height: 150px;
 }
 
-#cgda_setup_page .cmb2-id-cgda-frontend-custom-button-instructions {
+#backstage_setup_page .cmb2-id-backstage-frontend-custom-button-instructions {
     margin-top: 0;
 }
 
-#cgda_setup_page .cmb2-id-cgda-frontend-custom-button-instructions .cmb2-metabox-description {
+#backstage_setup_page .cmb2-id-backstage-frontend-custom-button-instructions .cmb2-metabox-description {
     color: #23282d;
 }
 
-#cgda_setup_page .cmb2-metabox-description {
+#backstage_setup_page .cmb2-metabox-description {
     color: #959595;
 }
