--- a/assets/css/customizer.css
+++ b/assets/css/customizer.css
@@ -1,7 +1,1 @@
-﻿#customizer-preview-notice.customize-info {
-    border-bottom : none;
-}
-
-#customizer-preview-notice span {
-    color : #F01D2E;
-}
+﻿
